--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "devDependencies": {
     "@types/node": "^20.4.5",
+    "axios": "^1.4.0",
+    "axios-retry": "^3.6.0",
+    "gpt-3-encoder": "^1.1.4",
     "ts-morph": "^19.0.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
