--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "scripts": {
     "build": "tsc",
     "dev": "NODE_ENV=test tsc && vite build && npm run test",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.4",
     "@types/node": "^20.4.5",
     "@types/yargs": "^17.0.24",
+    "jest": "^29.6.4",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
   },
   "dependencies": {
