--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "build": "tsc",
     "dev": "NODE_ENV=test tsc && vite build && npm run test",
-    "test": "jest"
+    "test:unit": "jest --testPathIgnorePatterns=e2e",
+    "test:e2e": "jest --testPathPattern=e2e"
   },
   "devDependencies": {
     "@types/jest": "^29.5.4",
