--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/jest": "^29.5.4",
     "@types/node": "^20.4.5",
     "@types/yargs": "^17.0.24",
+    "eslint": "^8.48.0",
+    "eslint-config-next": "^13.4.19",
     "jest": "^29.6.4",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
