--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "lib": ["ES2022"],
     "module": "CommonJS",
     "outDir": "./dist",
+    "baseUrl": "./src",
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
@@ -14,6 +15,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["lib", "__test-projects"],
-  "exclude": ["lib/**/*.test.ts", "__test-projects/**/*"]
+  "include": ["src", "__test-projects"],
+  "exclude": ["src/**/*.test.ts", "__test-projects/**/*"]
 }
